# leanecon_v3

./: .env.example  .gitignore  Dockerfile  Dockerfile.lean-base  Dockerfile.lean-base.dockerignore  README.md  pyproject.toml  railway.toml
.codebase-memory/: artifact.json  graph.db.zst
.github/workflows/: ci.yml  lean-base-image.yml
benchmark_baselines/: RUNNING_BENCHMARKS.md
benchmark_baselines/v3_alpha/: artifacts_manifest.json  benchmark_history.jsonl  local_gate.json  preamble_gaps.jsonl  tier0_smoke.json  tier1_core.json  tier2_frontier.json  tier2_frontier_partial_2026-04-22.md
data/: mathlib_rag_seed.jsonl
docs/: ALPHA_CHECKPOINT.md  ARCHITECTURE_v3.md  CHARTER_v3.md  DECISION_SPRINT_31_PROVIDER_STRATEGY.md  FRONTIER_FLYWHEEL.md  Feynman_setup.md  LeanEcon Engineering Log.md  MIGRATION_PLAN.md  PROVER_STATE_MACHINE.md  RAILWAY_DEPLOYMENT_CHECKLIST.md  ROADMAP_SPRINTS_26_30.md  ROADMAP_SPRINTS_30_35.md  SPRINTS_30_35_MASTER_PLAN.md  SPRINT_26_BASELINE.md  SPRINT_27_TECHNICAL_FOUNDATION.md  SPRINT_28_AGENTIC_ECOSYSTEM.md  SPRINT_29_PRODUCTIZATION.md  SPRINT_30_LOCAL_RC_AUDIT.md  SPRINT_30_REDEPLOY_ALPHA.md  SPRINT_34_NO_GO_RESULT.md  prover_audit_2026-04-21.md  sprint18_integrity_audit.md
evals/: __init__.py  aggregate_benchmarks.py  benchmark_manifest.json  benchmark_manifest.py  claim_buckets.json  common.py  gap_report.py  local_gate.py
evals/claim_sets/: README.md  phd_qual_alpha.jsonl  prover_easy_definable.jsonl  tier0_smoke.jsonl  tier1_core.jsonl  tier1_core_preamble_definable.jsonl  tier1_core_sample5_b.jsonl  tier2_frontier.jsonl  tier2_frontier_fail9_sprint18.jsonl  tier2_frontier_mathlib_native.jsonl  tier2_frontier_preamble_definable.jsonl  tier2_frontier_sample3_sprint18.jsonl
lean_workspace/: .gitignore  LeanEcon.lean  Main.lean  README.md  lake-manifest.json  lakefile.toml
lean_workspace/LeanEcon/: 764bf9e8-24ae-4b25-bc25-77fb390f171d.lean  Preamble.lean  local_gate_t0_budget_constraint.lean  local_gate_t0_budget_set_membership.lean  local_gate_t0_one_plus_one.lean
scripts/: diagnose_lean_lsp_mcp.py  extract_mathlib_premises.py  generate_architecture_audit_pdfs.py
skills/: econ_preamble_contribution.md  econ_preamble_model.md  faithfulness_rubric.md  hilbert_protocol.md  lean4_proving.md
src/: __init__.py  backend_capabilities.py  budget_profiles.py  claim_scope.py  config.py  preamble_library.py  providers.py  skills.py
src/api/: __init__.py  app.py  (+2 more)
tests/: conftest.py  test_aggregate_benchmarks.py  test_api_smoke.py  test_budget_profiles.py  test_claim_scope.py  test_claim_sets.py  test_config.py  test_eval_common.py  test_extract_mathlib_premises.py  test_formalizer.py  test_gap_detector.py  test_guardrails.py  test_json_extraction.py  test_lean_lsp_client.py  test_local_gate.py  test_lsp_cache.py  test_mathlib_rag.py  test_metrics_aggregator.py  test_observability.py  test_planner.py  test_preamble_library.py  test_prover.py  test_prover_mathlib_native.py  test_prover_repl.py  test_prover_state_machine.py  test_repl_helpers.py
(+194 files in other folders)
