[project]
name = "leanecon-v3"
version = "3.0.0-alpha"
description = "Thin-harness clean-slate Lean Econ v3 bootstrap."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "lean-interact>=0.4",
  "pydantic>=2.9",
  "python-dotenv>=1.0",
  "sqlite-utils>=3.36",
  "huggingface_hub>=0.24",
  "sentence-transformers>=3.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]

[project.scripts]
leanecon-local-gate = "evals.local_gate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "evals"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src.guardrails --cov=src.prover.repl --cov=src.prover.tools --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"
