[project]
name = "leanecon-v3"
version = "3.0.0-alpha"
description = "Thin-harness clean-slate Lean Econ v3 bootstrap."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "lean-interact>=0.4",
  "pydantic>=2.9",
  "python-dotenv>=1.0",
  "sqlite-utils>=3.36",
]

# Optional dependency groups:
# - dev: developer edit-loop gate (tests, lint, type stubs).
# - frontier: HF-backed embedding and search. Required for mathlib-native
#   retrieval and any HF-provider backends. The release profile does NOT
#   need this; the `HashingTextEmbedder` fallback in src/planner/retrieval.py
#   keeps the release path working without sentence-transformers.
# - research: local-model evaluation and Mathlib RAG semantic embedding
#   (CPU-only torch by default; switch to a CUDA index for GPU hosts).
[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]
frontier = [
  "huggingface_hub>=0.24",
  "sentence-transformers>=3.0",
]
research = [
  "huggingface_hub>=0.24",
  "sentence-transformers>=3.0",
  "torch>=2.11",
]

[project.scripts]
leanecon-local-gate = "evals.local_gate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "evals"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Coverage scope: full surface that drives the release denominator.
# src.prover.execution is the largest module (5,234 lines, 46 private methods);
# the goal is to *see* the surface, not to inflate percentages. Low-coverage
# findings are diagnostic, not gate-blocking.
addopts = "--cov=src.guardrails --cov=src.prover.repl --cov=src.prover.tools --cov=src.prover.synthesizer --cov=src.prover.execution --cov=src.retrieval --cov=src.claim_scope --cov=src.budget_profiles --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"
